<resources>
    <string name="app_name">NOTIFICATIONSv2</string>
    <string name="toast">Toast</string>
    <string name="coroutine_task_1">Coroutine Task 1</string>
    <string name="coroutine_task_2">Coroutine Task 2</string>
    <string name="throw_exception_coroutine_task_1">Throw Exception (Coroutine Task 1)</string>
    <string name="textview">TextView</string>
    <string name="asynctask_1">AsyncTask 1</string>
    <string name="asynctask_2">AsyncTask 2</string>
    <string name="notification_1">Notification 1</string>
    <string name="notification_2">Notification 2</string>
    <string name="cancel_1">Cancel 1</string>
    <string name="cancel_2">Cancel 2</string>
    <string name="cancel_all">Cancel All</string>
    <string name="channel_name">JavaDude</string>
    <string name="channel_description">This represents JavaDude application notifications</string>

</resources>
